finsihed all work

--- a/short-response/q1.md
+++ b/short-response/q1.md
@@ -3,5 +3,7 @@
 What are the two arguments that `useEffect` accepts? 
 
 # Answer
-
+The useEffect hook in React accepts two arguments:
+A function (effect) that contains the side-effect logic.
+An optional array of dependencies that determines when the effect should be re-run.
 # Teacher Feedback
