--- a/short-response/q1.md
+++ b/short-response/q1.md
@@ -1,9 +1,14 @@
 # Question
 
-What are the two arguments that `useEffect` accepts? 
+What are the two arguments that `useEffect` accepts?
 
 # Answer
+
 The useEffect hook in React accepts two arguments:
 A function (effect) that contains the side-effect logic.
 An optional array of dependencies that determines when the effect should be re-run.
+
 # Teacher Feedback
+
+Score: 3/3
+Excellent job! You correctly identified the two arguments that useEffect accepts and provided a clear explanation of their roles. Your detailed response shows a strong understanding of how useEffect works in React.
