--- a/short-response/q2.md
+++ b/short-response/q2.md
@@ -19,34 +19,35 @@ const MyComponent = ({ someProp }) => {
 ```
 
 # Answer
+
 ```js
 // Example 1: No Dependency Array
-  useEffect(() => {
-    console.log('hello world');
-  });
+useEffect(() => {
+  console.log("hello world");
+});
 
+// Example 2: Empty Dependency Array
+useEffect(() => {
+  console.log("hello world");
+  fetch(url);
+}, []);
 
-  // Example 2: Empty Dependency Array
-  useEffect(() => {
-    console.log('hello world');
-    fetch(url);
-  }, []);
+//In this example, the fetch() method retrieves data from the specified API endpoint. Since we are using an empty dependency array, the fetch() method will execute only once when the component mounts.
 
-  //In this example, the fetch() method retrieves data from the specified API endpoint. Since we are using an empty dependency array, the fetch() method will execute only once when the component mounts. 
-
-  //Single state variable
-  useEffect(() => {
-      console.log("Counter value: ", counter);
-  }, [counter]);
-  // The counter state variable is included in the dependency array, so the useEffect callback function will execute when the component is rendered for the first time, and then again whenever the counter state is updated.
+//Single state variable
+useEffect(() => {
+  console.log("Counter value: ", counter);
+}, [counter]);
+// The counter state variable is included in the dependency array, so the useEffect callback function will execute when the component is rendered for the first time, and then again whenever the counter state is updated.
 
 // Example 3: Multiple state variable
-  useEffect(() => {
-    console.log(num1 + num2);
+useEffect(() => {
+  console.log(num1 + num2);
 }, [num1, num2]);
 // The useEffect hook depends on the state variables num1 and num2. Therefore, whenever either of these state variables is updated, the useEffect callback function will execute and log the sum of the two state variables.
-  ```
-
-
+```
 
 # Teacher Feedback
+
+Score: 3/3
+Excellent answer! You clearly explained the three different ways to provide a dependency array in useEffect, and your examples effectively show each scenario. Your detailed explanations for each case demonstrate a strong understanding of how useEffect works
