--- a/short-response/q3.md
+++ b/short-response/q3.md
@@ -1,17 +1,19 @@
 # Question
 
-The component below makes a mistake when using `useEffect`. When running this code, we will get an error from React! 
+The component below makes a mistake when using `useEffect`. When running this code, we will get an error from React!
 
 What is the mistake? Also, please demonstrate how to properly fetch by fixing this code.
 
 ```js
 const DogDisplay = () => {
-  const [imgSrc, setImgSrc] = useState('https://images.dog.ceo/breeds/hound-english/n02089973_612.jpg');
+  const [imgSrc, setImgSrc] = useState(
+    "https://images.dog.ceo/breeds/hound-english/n02089973_612.jpg"
+  );
 
   useEffect(async () => {
     try {
-      const response = await fetch('https://dog.ceo/api/breeds/image/random');
-      if (!response.ok) throw new Error(`Error: ${response.status}`)
+      const response = await fetch("https://dog.ceo/api/breeds/image/random");
+      if (!response.ok) throw new Error(`Error: ${response.status}`);
       const data = await response.json();
       setImgSrc(data.message);
     } catch (error) {
@@ -19,23 +21,26 @@ const DogDisplay = () => {
     }
   }, []);
 
-  return <img src={imgSrc} />
-}
+  return <img src={imgSrc} />;
+};
 ```
 
 # Answer
+
 The mistake in the component is that the useEffect callback function is marked as async. React does not support async functions directly in useEffect. Instead, you should define an async function inside the useEffect and call it.
 
 ```js
-import React, { useState, useEffect } from 'react';
+import React, { useState, useEffect } from "react";
 
 const DogDisplay = () => {
-  const [imgSrc, setImgSrc] = useState('https://images.dog.ceo/breeds/hound-english/n02089973_612.jpg');
+  const [imgSrc, setImgSrc] = useState(
+    "https://images.dog.ceo/breeds/hound-english/n02089973_612.jpg"
+  );
 
   useEffect(() => {
     const fetchDogImage = async () => {
       try {
-        const response = await fetch('https://dog.ceo/api/breeds/image/random');
+        const response = await fetch("https://dog.ceo/api/breeds/image/random");
         if (!response.ok) throw new Error(`Error: ${response.status}`);
         const data = await response.json();
         setImgSrc(data.message);
@@ -51,6 +56,9 @@ const DogDisplay = () => {
 };
 
 export default DogDisplay;
-
 ```
+
 # Teacher Feedback
+
+Score: 3/3
+Great job! You correctly identified the mistake and provided a clear and accurate fix. Your updated code demonstrates the proper way to handle asynchronous operations within useEffect.
